fixed href in url of css and logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Food Zilla</title>
 
     <!-- custom style sheet -->
-    <link rel="stylesheet" href="/asset/css/styles.css" />
+    <link rel="stylesheet" href="asset/css/styles.css" />
 
     <!-- font awesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
@@ -23,7 +23,7 @@
 <body>
     <!-- header section start -->
     <header>
-        <img class="logo" src="/asset/images/logo.png" alt="" />       
+        <img class="logo" src="asset/images/logo.png" alt="" />       
         <div id="menu-bar" class="class fas fa-bars"></div>
         <!-- <a href="#" class="logo"><i class="fas fa-utensils"></i>food</a> -->
         <nav class="navbar">
