changed content of the website

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <!-- header section start -->
     <header>
-        <img class="logo" src="asset/images/logo.png" alt="" />       
+        <img class="logo" src="asset/images/logo.png" alt="" />
         <div id="menu-bar" class="class fas fa-bars"></div>
         <!-- <a href="#" class="logo"><i class="fas fa-utensils"></i>food</a> -->
         <nav class="navbar">
@@ -42,8 +42,7 @@
         <div class="content">
             <h3>Welcome to Food Zilla</h3>
             <p>
-                A Food ordering website. Here you can look at our product
-                and can order it.
+                Discover the world of unparalleled flavors
             </p>
             <a href="#" class="btn">order now</a>
         </div>
@@ -61,22 +60,20 @@
                 <img class="image" src="asset/images/s-img-1.jpg" alt="">
                 <div class="content">
                     <img src="asset/images/s-1.png" alt="">
-                    <h3>Tasty Burger</h3>
-                    <p>A famous berger from new york special shop. If you say that food, especially savoury food, is
-                        tasty, you mean that it has a fairly strong and pleasant flavour which makes it good to eat. Try
-                        this tasty dish for supper with a crispy salad. I thought the food was very tasty. Synonyms:
-                        delicious, luscious, palatable, delectable More Synonyms of tasty. </p>
+                    <h3>Burger</h3>
+                    <p>Check our huge collections of berger from vegetarian to non-vegetarain. But don't forget to check
+                        our special 'Thunder Berger', our trademark product, Made with chicken tikka coated in spicy,
+                        delicious makhani gravy filled inside a burger bun. </p>
                 </div>
             </div>
             <div class="box">
                 <img class="image" src="asset/images/s-img-2.jpg" alt="">
                 <div class="content">
                     <img src="asset/images/s-2.png" alt="">
-                    <h3>Tasty Pizza</h3>
-                    <p>A famous berger from new york special shop. If you say that food, especially savoury food, is
-                        tasty, you mean that it has a fairly strong and pleasant flavour which makes it good to eat. Try
-                        this tasty dish for supper with a crispy salad. I thought the food was very tasty. Synonyms:
-                        delicious, luscious, palatable, delectable More Synonyms of tasty.</p>
+                    <h3>Pizza</h3>
+                    <p>Good food is a combination of mouth-watering flavours and healthy ingredients. Your favourite
+                        pizza gets a healthy makeover with a multi-grain base. Make the base from scratch with whole
+                        wheat flour, oats, maize flour and nutrient-dense seeds. </p>
                 </div>
             </div>
             <div class="box">
@@ -84,10 +81,9 @@
                 <div class="content">
                     <img src="asset/images/s-3.png" alt="">
                     <h3>Ice-cream</h3>
-                    <p>A famous berger from new york special shop. If you say that food, especially savoury food, is
-                        tasty, you mean that it has a fairly strong and pleasant flavour which makes it good to eat. Try
-                        this tasty dish for supper with a crispy salad. I thought the food was very tasty. Synonyms:
-                        delicious, luscious, palatable, delectable More Synonyms of tasty.</p>
+                    <p>You don't need an ice-cream maker to serve cool, creamy scoops. This semifreddo, made with fresh
+                        strawberries, whipped cream, sweetened condensed milk, Greek yogurt, and black sesame seeds gets
+                        frozen in a bowl or loaf pan.</p>
                 </div>
             </div>
             <div class="box">
@@ -95,21 +91,18 @@
                 <div class="content">
                     <img src="asset/images/s-4.png" alt="">
                     <h3>Cold Drinks</h3>
-                    <p>A famous berger from new york special shop .If you say that food, especially savoury food, is
-                        tasty, you mean that it has a fairly strong and pleasant flavour which makes it good to eat. Try
-                        this tasty dish for supper with a crispy salad. I thought the food was very tasty. Synonyms:
-                        delicious, luscious, palatable, delectable More Synonyms of tasty.</p>
+                    <p>Our collection of cold
+                        drinks include tasty recipes for cocktails, mocktails, smoothies, lemonade, iced tea and more.
+                        Whether you like sweet or tangy cold drinks.</p>
                 </div>
             </div>
             <div class="box">
                 <img class="image" src="asset/images/s-img-5.jpg" alt="">
                 <div class="content">
                     <img src="asset/images/s-5.png" alt="">
-                    <h3>Tasty Sweets</h3>
-                    <p>A famous berger from new york special shop. If you say that food, especially savoury food, is
-                        tasty, you mean that it has a fairly strong and pleasant flavour which makes it good to eat. Try
-                        this tasty dish for supper with a crispy salad. I thought the food was very tasty. Synonyms:
-                        delicious, luscious, palatable, delectable More Synonyms of tasty.</p>
+                    <h3>Desserts</h3>
+                    <p>"Stressed spelled backwards is desserts." Coincidence? We think not. Try our special desserts
+                        which are Sinful, rich and creamy, this recipe is the perfect finish to a meal. </p>
                 </div>
             </div>
             <div class="box">
@@ -117,10 +110,8 @@
                 <div class="content">
                     <img src="asset/images/s-6.png" alt="">
                     <h3>Breakfast</h3>
-                    <p>A famous berger from new york special shop. If you say that food, especially savoury food, is
-                        tasty, you mean that it has a fairly strong and pleasant flavour which makes it good to eat. Try
-                        this tasty dish for supper with a crispy salad. I thought the food was very tasty. Synonyms:
-                        delicious, luscious, palatable, delectable More Synonyms of tasty.</p>
+                    <p>Looking for healthy and tasty breakfast then you are at the right place. We have a huge variety
+                        of breakfasts available from all around the globe. </p>
                 </div>
             </div>
         </div>
@@ -132,9 +123,9 @@
         <h1 class="heading">most <span>popular</span> foods</h1>
         <div class="box-container">
             <div class="box">
-                <span class="price"> $5 - $20 </span>
+                <span class="price"> $15 - $30 </span>
                 <img src="asset/images/p-1.jpg" alt="">
-                <h3>tasty berger</h3>
+                <h3>Thunder berger</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -147,7 +138,7 @@
             <div class="box">
                 <span class="price"> $5 - $20 </span>
                 <img src="asset/images/p-2.jpg" alt="">
-                <h3>tasty cakes</h3>
+                <h3>Orange cake</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -158,9 +149,9 @@
                 <a href="#" class="btn">order now</a>
             </div>
             <div class="box">
-                <span class="price"> $5 - $20 </span>
+                <span class="price"> $4 - $15 </span>
                 <img src="asset/images/p-3.jpg" alt="">
-                <h3>tasty Sweets</h3>
+                <h3>Mixed Sev</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -171,22 +162,22 @@
                 <a href="#" class="btn">order now</a>
             </div>
             <div class="box">
-                <span class="price"> $5 - $20 </span>
+                <span class="price"> $15 - $40 </span>
                 <img src="asset/images/p-4.jpg" alt="">
-                <h3>tasty cupcakes</h3>
+                <h3>Chocolate Cupcake</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
                 </div>
                 <a href="#" class="btn">order now</a>
             </div>
             <div class="box">
-                <span class="price"> $5 - $20 </span>
+                <span class="price"> $2 - $25 </span>
                 <img src="asset/images/p-5.jpg" alt="">
-                <h3>cold drinks</h3>
+                <h3>Mixed Fruit Combo drink</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -197,9 +188,9 @@
                 <a href="#" class="btn">order now</a>
             </div>
             <div class="box">
-                <span class="price"> $5 - $20 </span>
+                <span class="price"> $5 - $50 </span>
                 <img src="asset/images/p-6.jpg" alt="">
-                <h3>ice cream</h3>
+                <h3>Red Velvet Ice Cream</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -229,7 +220,7 @@
         </div>
         <div class="box">
             <img src="asset/images/step-4.jpg" alt="">
-            <h3>Enjoy your favourite food</h3>
+            <h3>Enjoy delicious food</h3>
         </div>
     </section>
     <!-- steps section ends -->
@@ -241,72 +232,72 @@
             <div class="box">
                 <img src="asset/images/g-1.jpg" alt="">
                 <div class="content">
-                    <h3>tasty food</h3>
-                    <p>This is a tasty food, you should try it once in your lifetime.</p>
+                    <h3>Thunder berger</h3>
+                    <p>Food Zilla special Thunder berger.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
             </div>
             <div class="box">
                 <img src="asset/images/g-2.jpg" alt="">
                 <div class="content">
-                    <h3>tasty food</h3>
-                    <p>This is a tasty food, you should try it once in your lifetime.</p>
+                    <h3>Veg Cheese Sandwhich</h3>
+                    <p>Cheese loaded vegetable Sandwhich.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
             </div>
             <div class="box">
                 <img src="asset/images/g-3.jpg" alt="">
                 <div class="content">
-                    <h3>tasty food</h3>
-                    <p>This is a tasty food, you should try it once in your lifetime.</p>
+                    <h3>Spring Roll</h3>
+                    <p>Mixed veg Spring Roll.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
             </div>
             <div class="box">
                 <img src="asset/images/g-4.jpg" alt="">
                 <div class="content">
-                    <h3>tasty food</h3>
-                    <p>This is a tasty food, you should try it once in your lifetime.</p>
+                    <h3>Chocolate cupcake</h3>
+                    <p>Dark chocolate filled in the cake.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
             </div>
             <div class="box">
                 <img src="asset/images/g-5.jpg" alt="">
                 <div class="content">
-                    <h3>tasty food</h3>
-                    <p>This is a tasty food, you should try it once in your lifetime.</p>
+                    <h3>Vanilla Dessert</h3>
+                    <p>Mouth watering cubes of vanilla.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
             </div>
             <div class="box">
                 <img src="asset/images/g-6.jpg" alt="">
                 <div class="content">
-                    <h3>tasty food</h3>
-                    <p>This is a tasty food, you should try it once in your lifetime.</p>
+                    <h3>Chicken Nuggets</h3>
+                    <p>Best nuggets you have ever tasted.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
             </div>
             <div class="box">
                 <img src="asset/images/g-7.jpg" alt="">
                 <div class="content">
-                    <h3>tasty food</h3>
-                    <p>This is a tasty food, you should try it once in your lifetime.</p>
+                    <h3>Omelette Bread</h3>
+                    <p>Bread and Omelette combo.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
             </div>
             <div class="box">
                 <img src="asset/images/g-8.jpg" alt="">
                 <div class="content">
-                    <h3>tasty food</h3>
-                    <p>This is a tasty food, you should try it once in your lifetime.</p>
+                    <h3>Choco Bar</h3>
+                    <p>Vanilla loaded chocobar.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
             </div>
             <div class="box">
                 <img src="asset/images/g-9.jpg" alt="">
                 <div class="content">
-                    <h3>tasty food</h3>
-                    <p>This is a tasty food, you should try it once in your lifetime.</p>
+                    <h3>garlic bread</h3>
+                    <p>Garlic bread with a twist.</p>
                     <a href="#" class="btn">order now</a>
                 </div>
             </div>
@@ -320,7 +311,7 @@
         <div class="box-container">
             <div class="box">
                 <img src="asset/images/pic1.png" alt="">
-                <h3>Naruto Uzumaki</h3>
+                <h3>Hinata Hyuga</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -328,11 +319,11 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                 </div>
-                <p>Food Zilla offers best foods, dattebayo!!</p>
+                <p>One stop destination for my hunger.</p>
             </div>
             <div class="box">
                 <img src="asset/images/pic2.png" alt="">
-                <h3>Kakashi Hatake</h3>
+                <h3>Naruto Uzumaki</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -344,7 +335,7 @@
             </div>
             <div class="box">
                 <img src="asset/images/pic3.png" alt="">
-                <h3>Sasuke Uchiha</h3>
+                <h3>Ino Yamanaka</h3>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -352,7 +343,7 @@
                     <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
-                <p>Food Zilla offers best foods, dattebayo!!</p>
+                <p>Thunder Berger, Try it and you will not regret.</p>
             </div>
         </div>
     </section>
